--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -1,5 +1,6 @@
-# Listen on TLS port 3129
-https_port 3129 cert=/etc/squid/certs/squid.pem key=/etc/squid/certs/squid.key
+# Listen on standard proxy ports
+http_port 3128
+http_port 3129
 
 # Authentication
 auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/auth/users
@@ -20,4 +21,4 @@ http_access allow CONNECT SSL_ports authenticated
 
 # Disable caching (optional)
 cache deny all
-access_log /dev/stdout
+access_log stdio:/var/log/squid/access.log
